# semantic-caching

./: Dockerfile  README.md  conda.yml  docker-compose.yaml  main.ipynb  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
semantic_caching/: __init__.py
semantic_caching/core/: GetAnswer.py  SematicCaching.py  VectorStorage.py  __init__.py  requests.py
semantic_caching/core/models/: __init__.py  cachedb.py
semantic_caching/core/services/: base.py  cache_service.py
semantic_caching/core/utilities/: ConsoleLogger.py  __init__.py  config.py  embedding.py  install_package.py  logger.py  settings.py
src/core/: SematicCaching.py  VectorStorage.py  __init__.py  make_predictions.py  requests.py
src/core/models/: PyObjectId.py  __init__.py  cachedb.py
src/core/services/: base.py  cache_service.py
src/core/utilities/: __init__.py  config.py  logger.py  settings.py
