[project]
name = "semantic_caching_sirishshresthas"
version = "0.0.1"
authors = [
  { name="Sirish Shrestha", email="sirish.shrestha@gmail.com" },
]
description = "Semantic Caching enhances the efficiency of semantic search operations by caching query results, thereby reducing redundant computations and trips to the LLM for similar queries. This approach speeds up response times, decreases computational load, and minimizes costs. The project utilizes a sentence transformer model for semantic understanding and integrates with the Qdrant vector database for storing and searching embeddings."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sirishshresthas/semantic-caching"
Issues = "https://github.com/sirishshresthas/semantic-caching/issues"