[tool.poetry]
name = "semantic-caching"
version = "1.0.0"
authors = [
  "Sirish Shrestha <sirish.shrestha@gmail.com>",
]
maintainers = [
  "Sirish Shrestha <sirish.shrestha@gmail.com>",
]
description = "A Python package leveraging Semantic Caching to enhance efficiency in semantic search operations. By caching query results, reducing redundant computations, and integrating with the Qdrant vector database, this package accelerates response times, minimizes computational load, and lowers costs."
readme = "README.md"
repository = "https://github.com/sirishshresthas/semantic-caching"
documentation = "https://github.com/sirishshresthas/semantic-caching/docs"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3",
    "Operating System :: OS Independent",
    "Development-Staus :: 4 - Beta",
    "Intended-Audience :: Developers", 
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[too.poetry.urls]
"Homepage" = "https://github.com/sirishshresthas/semantic-caching"
"Issues" = "https://github.com/sirishshresthas/semantic-caching/issues"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
torch = "^2.2.1"
sentence_transformers = "^2.4.0"
numpy = "^1.26.0"
qdrant_client = "^1.7.3"
pymongo = "^4.6.2"
ipywidgets = "^8.1.2"
huggingface_hub = "*"
accelerate = "*"
bitsandbytes = "*"
transformers = { git = "https://github.com/huggingface/transformers" }

[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]